MET-6262 approach using objectId for paging